--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -36,6 +36,7 @@
         android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_media_play"
         android:alpha="50"
-        android:adjustViewBounds="true" />
+        android:adjustViewBounds="true"
+        android:soundEffectsEnabled="false"/>
 
 </android.support.design.widget.CoordinatorLayout>
