--- a/app/src/main/res/layout/drawer_menu.xml
+++ b/app/src/main/res/layout/drawer_menu.xml
@@ -12,10 +12,28 @@
         android:id="@+id/drawer_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Options"
+        android:text="TinyOptions"
         android:gravity="center"
         android:layout_marginBottom="10dp"
         android:background="@color/colorPrimaryDark"
         android:textColor="@color/white" />
+
+
+    <TextView
+        android:id="@+id/drawer_lang"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginBottom="10dp"
+        android:background="@color/colorPrimaryDark"
+        android:textColor="@color/white"
+        android:padding="10dp" />
+
+    <ListView
+        android:id="@+id/drawer_dictionary"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="10dp"
+        android:layout_below="@+id/drawer_lang" />
 
 </RelativeLayout>
