--- a/app/src/main/res/layout/metronome_input.xml
+++ b/app/src/main/res/layout/metronome_input.xml
@@ -16,16 +16,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ticker"
-        android:background="@color/colorPrimary"
         android:indeterminate="false"
         android:clickable="true"
         android:layout_centerVertical="true"
         android:padding="20dp"
         android:progressBackgroundTintMode="multiply"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentEnd="false"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentStart="false"
         android:progressBackgroundTint="#775252"
         android:splitTrack="false" />
 
