--- a/app/src/main/res/layout/dictionary_entry.xml
+++ b/app/src/main/res/layout/dictionary_entry.xml
@@ -23,7 +23,11 @@
             android:id="@+id/tempo_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="5dp" />
+            android:paddingTop="5dp"
+            android:paddingLeft="10dp"
+            android:paddingStart="10dp"
+            android:paddingRight="0dp"
+            android:paddingEnd="0dp"/>
 
         <TextView
             android:id="@+id/tempo_value"
@@ -32,7 +36,11 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:gravity="end"
-            android:layout_below="@+id/tempo_name" />
+            android:layout_below="@+id/tempo_name"
+            android:paddingLeft="0dp"
+            android:paddingStart="0dp"
+            android:paddingRight="10dp"
+            android:paddingEnd="10dp" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
