--- a/app/src/main/res/layout/drawer_menu.xml
+++ b/app/src/main/res/layout/drawer_menu.xml
@@ -8,32 +8,46 @@
     android:layout_marginTop="?attr/actionBarSize"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/drawer_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TinyOptions"
-        android:gravity="center"
-        android:layout_marginBottom="10dp"
-        android:background="@color/colorPrimaryDark"
-        android:textColor="@color/white" />
-
-
-    <TextView
-        android:id="@+id/drawer_lang"
+    <RelativeLayout
+        android:id="@+id/drawer_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_marginBottom="10dp"
         android:background="@color/colorPrimaryDark"
         android:textColor="@color/white"
-        android:padding="10dp" />
+        android:padding="10dp" >
+
+        <TextView
+            android:id="@+id/drawer_lang"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:paddingLeft="5dp"
+            android:paddingStart="5dp"
+            android:paddingRight="0dp"
+            android:paddingEnd="0dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/sort_dictionary"
+            android:layout_alignTop="@+id/drawer_lang"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:background="@null"
+            android:src="@drawable/ic_sort_variant_white_24dp" />
+
+    </RelativeLayout>
 
     <ListView
         android:id="@+id/drawer_dictionary"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="10dp"
-        android:layout_below="@+id/drawer_lang" />
+        android:layout_below="@+id/drawer_header" />
 
 </RelativeLayout>
