Remove some hard-coded strings

--- a/app/src/main/res/layout/metronome_input.xml
+++ b/app/src/main/res/layout/metronome_input.xml
@@ -32,35 +32,34 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="-"
+        android:text="@string/minus"
         android:id="@+id/minus_button"
         android:clickable="true"
         android:focusable="false"
         android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/button"
-        android:layout_toStartOf="@+id/button"
-        android:elegantTextHeight="false" />
+        android:layout_toLeftOf="@+id/metronome_tap"
+        android:layout_toStartOf="@+id/metronome_tap" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="+"
+        android:text="@string/tap"
+        android:id="@+id/metronome_tap"
+        android:clickable="false"
+        android:layout_alignTop="@+id/minus_button"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/plus"
         android:id="@+id/plus_button"
         android:clickable="true"
         android:layout_alignTop="@+id/minus_button"
-        android:layout_toRightOf="@+id/button"
-        android:layout_toEndOf="@+id/button" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button"
-        android:clickable="false"
-        android:layout_alignTop="@+id/minus_button"
-        android:layout_centerHorizontal="true"
-        android:alpha="0.2" />
+        android:layout_toRightOf="@+id/metronome_tap"
+        android:layout_toEndOf="@+id/metronome_tap" />
 
     <TextView
         style="?android:attr/buttonStyleSmall"
@@ -89,8 +88,8 @@
         android:focusable="false"
         android:elegantTextHeight="false"
         android:layout_alignTop="@+id/percent"
-        android:layout_toLeftOf="@+id/button"
-        android:layout_toStartOf="@+id/button" />
+        android:layout_toLeftOf="@+id/metronome_tap"
+        android:layout_toStartOf="@+id/metronome_tap" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
